Fixed z-index issue with enrollment plan modal.

--- a/Website/frontend/assets/css/_sass/partials/_ui.scss
+++ b/Website/frontend/assets/css/_sass/partials/_ui.scss
@@ -70,7 +70,7 @@ div.tabbable {
 	position: fixed;
 	top: 10%;
 	left: 50%;
-	z-index: 10000;
+	z-index: 10000 !important;
 	width: 560px;
 	margin-left: -280px;
 	background-color: #ffffff;
